salesforce_ant_45.0/sample/codepkg/objects/AddOn__c.object
<CustomObject>
    <fields>
        <fullName>AddOn_Id__c</fullName>
        <label>AddOn Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ordered_Items__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordered Items</label>
        <referenceTo>Ordered_Items__c</referenceTo>
        <relationshipLabel>AddOns</relationshipLabel>
        <relationshipName>AddOns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>AddOns</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AddOns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>